--- a/SportMetricsViewer/SportMetricsViewer.csproj
+++ b/SportMetricsViewer/SportMetricsViewer.csproj
@@ -63,7 +63,7 @@
         <DependentUpon>MainPage.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
-      <Compile Update="Pages\ResultsFillingPage.xaml.cs">
+      <Compile Update="Pages\SaveSessionPage.xaml.cs">
         <DependentUpon>ExerciseCollectorPage.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
@@ -76,7 +76,7 @@
       <MauiXaml Update="Pages\ExerciseEntrantTypePage.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
-      <MauiXaml Update="Pages\ResultsFillingPage.xaml">
+      <MauiXaml Update="Pages\SaveSessionPage.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
     </ItemGroup>
