--- a/SportMetricsViewer/SportMetricsViewer.csproj
+++ b/SportMetricsViewer/SportMetricsViewer.csproj
@@ -83,6 +83,13 @@
 
     <ItemGroup>
       <Folder Include="Controls\" />
+      <Folder Include="Domain\" />
+      <Folder Include="Infrastructure\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ExerciseTracker.Domain\ExerciseTracker.Domain.csproj" />
+      <ProjectReference Include="..\ExerciseTracker.Infrastructure.DataAccess\ExerciseTracker.Infrastructure.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
