--- a/ExerciseTracker.MVVM/ExerciseTracker.MVVM.csproj
+++ b/ExerciseTracker.MVVM/ExerciseTracker.MVVM.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+      <PackageReference Include="Microsoft.Maui.Controls.Core" Version="8.0.7" />
     </ItemGroup>
 
     <ItemGroup>
